tests/fixtures/invalid/domain_field_const_violation.gcl
// domain_field_const_violation.gcl -- const struct violates a field bound
type SatelliteSpec {
    SatelliteSpec(mass: Mass(min: 100.0 kg, max: 2000.0 kg), altitude: Length(min: 200.0 km)),
}

const node SAT: SatelliteSpec = SatelliteSpec(mass: 5000.0 kg, altitude: 50.0 km);
